compiler/tests/fixtures/invalid/semantics/trope_missing_roles.viv
// Trope with no roles — should be rejected

trope lonely:
    conditions:
        true
